--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 
 <body>
+	<div class="me2"></div>
 	<!-- navigation buttons --> 
 		<ul> 
 			<ul class="navigation">
@@ -40,7 +41,6 @@
 				<li class="pearl4" data-slide="4"></li>
 			</ul>
 		</ul>
-
 
 	<ul class="navigation">
 		<li data-slide="1">
@@ -55,39 +55,47 @@
 	</a>  
 	--> 
 
-
-
 	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
-		<div class=" boat"> 
-		</div> 
+		
+		<div class="drop">
+			<div class=" boat"> 
+			</div>
+			<div class="me2">
+				<div class="meText"> 
+					<center>
+						<img src ="images/me.png" />
+						<br> 
+						van doan
+						<br>~
+						<br>a 
+						<br>Floridian 
+						<br>in Brooklyn
+						<br>who 
+						<br>codes
+						<br>.
+					<center> 
+				</div>
+			</div>
+		</div>
+
 		<div class="fishhead"> 
 			<img class="fish" src="images/fishhead.png">
 		</div> 
 			<div>
 
-<a href="#" class="logo" style="width: 103px;"> 
-
+<div class="logo" style="width: 103px;"> 
       <img src="images/vandoona.png" alt=" logo" style="height: 30.96px; opacity: .9; margin-top: -16.5px;">
-      <div class="me2">
-			<div class="meText"> 
-				<center>
-				<img src ="images/me.png" />
-				Van Doan 
-				<br>
-				<br>full stack 
-				<br>developer<br>~
-				<br>Floridian 
-				<br>in Brooklyn
-				<center> 
-			</div>
-		</div>
+  </div>
+
 	</a>
 </div> 
 		<div class="font">
-			<p>create </p>
+			<center> create</center>
 		</div>
+		<div class="font1"> 
+			poke around <br> and discover 
+		</div> 
 		<a class="button" data-slide="2" title=""></a>
-		
 	</div>
 					<!--End Slide 1-->
 
@@ -109,12 +117,10 @@
 			<img class="vansdesk" src="images/slide2/vansdesk.png" data-stellar-ratio="2" data-stellar-vertical-offset="-200"alt="">
 			<img class="opac" src="images/slide2/blur-ball.png" data-stellar-ratio="3" data-stellar-vertical-offset="-42"alt="">
 			<img class="opac" src="images/slide2/blur-ball.png" data-stellar-ratio="3" data-stellar-vertical-offset="-45"alt="">
-
-
 		</div>
 
 		<span class="font2">and build... </span>
-
+		<div class="font32"> some of my creations </div> 
 
 		<a class="button" data-slide="3" title=""></a>
 
@@ -133,8 +139,8 @@
 		  <li><img src="images/slide3/boats.png"  title="Gili Islands, Indonesia" /></li>
 
 		  <li><img src="images/slide3/flame.png" title="Kuala Lumpur, Malaysia" /></li>
-		  <li><img src="images/slide3/island.png" title="Borneo, Malaysia" /></li>
-		  <li><img src="images/slide3/kkForest.png" title="Kota Kinabalu Mt., Sabah, , East Malysia" /></li>
+		  <li><img src="images/slide3/island.png" title=" Western Borneo" /></li>
+		  <li><img src="images/slide3/kkForest.png" title="Mt. Kinabalu, Ranau, Sabah, East Malysia" /></li>
 		  <li><img src="images/slide3/mizu.png"  title="Mizu, Washington, D.C." /></li>
 		</ul>
 	</div>
@@ -167,36 +173,36 @@
 			    <br>flows well, 
 			    <br>and this is 
 			    <br>what 
-			    I aim for. 
-			    <br><br>Flow.
+			    I <br>aim for. 
+			    <br><br>Flow. <br><br>			    Like a fish <br>
+			    in a <br>current.
 			    </div>
 
 
 			    <div class="grey"><h3>Briefcase </h3><br>
-			    An econ 
-			    degree 
+			    One econ 
+			    degree, 
 			    <br>Ruby 
-			    on Rails 
+			    on Rails, 
 			    <br>HTML, 
 			    CSS, 
-			    JS 
+			    JS, 
 			    <br>Python, 
-			    Illustrator 
-			    <br>Photoshop, Nikon D90 
+			    Illustrator, 
+			    <br>Photoshop, a Nikon <br>D90 
+			    camera, lenses,
 			    <br>wireframing, 
-			    flat 
-			    <br>ui design,
-
-			    pencils, 
-			    <br>pens, & pixels. 
+			    
+			    <br>
+			    brushes,
+			     pencils,<br> 
+			    pens, & pixels. 
 			    <br> <br>
-			    A bit of<br>  
-			    Angular js, 
-			    php 
-			    <br>acrylic paint, 
-			    sass 
-			    <br>haml, and 
-			    iOS 
+			    
+			    A bit of Angular js, 
+			    <br>php,
+			    sass, haml, 
+			    <br>and iOS 
 
 
 
@@ -206,24 +212,26 @@
 			    climbing<br>
 			    camping<br>
 			    coding<br>
+			    fonts,
 			    music<br> 
-				art<br> 
+				art, 
 				biking<br>
 				photography<br>
 				watercolor<br>
-				books<br>
+				books, data<br>
 				pushing to Git <br>
-				learning<br> 
-				and so much more. 
+				learning stuff<br> 
+				people<br>
+				and so <br>much more. 
 				</div>
 
 			     <div class="grey"><h3>Past Projects</h3><br>
 			     Interactive social 
 			     <br>restaurant guide 
-			     <br>(rails), e-commerce 
+			     <br>(rails),<br> e-commerce 
 			     <br>site (rails),
 			     flat <br>ui 
-			     design, stocks<br> and 
+			     design, <br>stocks<br> and 
 			     website <br>scrapper 
 			     <br>(Python), 
 			     <br>parallax 
@@ -235,17 +243,15 @@
 			   	<div>
 			   		<h3>Future ones</h3>
 			   		<br>
-				     Twitter 
-				     <br>scrapper 
-				     <br>and aggregator 
-				     <br>infographs, 
-				     data 
+				     Twitter <br>scrapper 
+				     <br>and aggregator, 
+				     <br>infographs, data<br>
 				     representations 
 				     <br>with open gov 
-				     <br>data 
-				     (D3JS)
+				     <br>data <br>
+				     (D3JS),
 				     <br>iOS 
-				     apps, 
+				     apps,<br> 
 				     and 
 				     <br>so 
 				     much 
@@ -259,6 +265,7 @@
 			<div class="icons"> 
 				<div > 
 					<center>
+						<p> find me </p>
 						<div class="innerIcon">
 							<div>
 								<a href="https://github.com/vandoan">
@@ -273,8 +280,8 @@
 								</i></a>
 							</div>
 							<div class="sign">
-								crafted
-								by vanDoan
+								crafted |  sketched | snapped<br>
+								by vandoona
 							</div>
 						</div>
 					</center>
@@ -282,7 +289,7 @@
 			</div>
 			<div class="footer">
 				<div class="innerfooter"> 
-					<div><h3> Meow World </h3></div>
+					<div><h3> Mee-ow, World. </h3></div>
 
 					<div class="cat"> <i class="fa fa-github-alt fa-2x"></i></div>
 				</div>
